test for gitignore

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/amyZhoucc/ReactProject.git"
   },
-  "author": "zcc",
+  "author": "amyZhoucc",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/amyZhoucc/ReactProject/issues"
